syntax = "proto3";

package com.cgi.eoss.osiris;

import "common_messages.proto";

option java_multiple_files = true;
option java_package = "com.cgi.eoss.osiris.rpc.catalogue";

service CatalogueService {
    rpc DownloadOsirisFile (OsirisFileUri) returns (stream FileStream);
    rpc GetDatabasketContents (Databasket) returns (DatabasketContents);
    rpc GetDataSourcePolicies (Uris) returns (UriDataSourcePolicies);
}

message OsirisFile {
    string filename = 1;
    OsirisFileUri uri = 2;
}

message OsirisFileUri {
    string uri = 1;
}

message Databasket {
    string uri = 1;
}

message DatabasketContents {
    repeated OsirisFile files = 1;
}

message Uris {
    repeated OsirisFileUri fileUris = 1;
}

message UriDataSourcePolicies {
    repeated UriDataSourcePolicy policies = 1;
}

message UriDataSourcePolicy {
    enum Policy {
        CACHE = 0;
        MIRROR = 1;
        REMOTE_ONLY = 2;
    }
    OsirisFileUri uri = 1;
    Policy policy = 2;
}
